--- a/package.json
+++ b/package.json
@@ -14,10 +14,22 @@
     "genprivkey": "npx ts-node ./scripts/privateKey.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "scrypt-ts": "^1.3.17"
+    "react-hook-form": "^7.48.2",
+    "scrypt-ord": "^1.0.11",
+    "scrypt-ts": "^1.3.17",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
